--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@
     color: #fff;
     padding: 10px;
     border: none;
+    border-radius: 20px;
     outline: none;
     background: transparent;
     font-size: 16px;
