--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@
 }
 
 .uicard:hover {
-  box-shadow: 0px 0px 30px 1px rgba(0, 255, 117, 0.30);
+  box-shadow: 0px 0px 30px 1px #00ff754d;
 }
 .head-text{
     font-size: 32px;
